<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/whisper"
    tools:context=".home.HomeFragment">

    <TextView
        android:id="@+id/casesOfDonations_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/cases_of_donation"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_person_outline"
        android:drawablePadding="@dimen/_4sdp"
        app:drawableTint="@color/black" />

    <TextView
        android:id="@+id/todayDate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_28sdp"
        android:text="today, 2 october 2020"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/casesOfDonations_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/casesOfDonations_tv" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/casesOfDonations_rv"
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casesOfDonations_tv"
        tools:listitem="@layout/home_donation_cases_item"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <Button
        android:id="@+id/cases_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/inKindDonation_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casesOfDonations_rv"
        android:text="@string/cases"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_8sdp"/>

    <Button
        android:id="@+id/inKindDonation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cases_btn"
        app:layout_constraintTop_toBottomOf="@+id/casesOfDonations_rv"
        android:text="@string/in_kind_donations"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/emerald"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inKindDonation_btn"
        tools:listitem="@layout/home_cases_type_item"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</androidx.constraintlayout.widget.ConstraintLayout>